<resources>
    <string name="app_name">Foods</string>
    <string name="foods">Foods</string>

    <string name="title_default">Digital House Foods</string>
    <string name="button_login">LOGIN</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="restaurante">Restaurante</string>
    <string name="restaurante_detalhes">Restaurante - Detalhes</string>
    <string name="pratos_principais">Pratos principais</string>
</resources>